<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Rainy Days</string>
    <string name="action_settings">Settings</string>
    <string name="extended_fab_label">@string/location_picker_header</string>

    <!--Location picker-->
    <string name="location_picker_header">Add a new location</string>
    <string name="location_picker_my_location">Use my location</string>
    <string name="location_picker_map">Choose on map</string>
    <string name="location_picker_samples">Use sample locations</string>
    <string name="location_picker_latitude">Latitude: </string>
    <string name="location_picker_longitude">Longitude: </string>

    <!--Warnings-->
    <string name="warning_network">A network error occurred</string>
    <string name="warning_server">The server experienced an error</string>
    <string name="warning_network_code">A network error occurred: <xliff:g id="code">%1$d</xliff:g></string>
    <string name="warning_no_connection">No connection</string>
    <string name="warning_no_location_found">No location found</string>
    <string name="warning_location_already_added">Location already added</string>
    <string name="rain_gauge">rain_gauge</string>

    <!--Rain Data-->
    <string name="rain_data_precipitation"><xliff:g id="precipitation">%1$.2f</xliff:g> <xliff:g id="units">%2$s</xliff:g></string>

    <!--Settings-->
    <string name="units_key">units_key</string>
    <string name="units_label">Metric Units?</string>
</resources>
